7. Material Icon Component - Styling Angular Components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-
+<app-top-menu></app-top-menu>
 
 <main>
+    <!-- here is the output of the router, depending on the content of the URL: about,... -->
     <router-outlet></router-outlet>
 </main>
