--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -1,5 +1,28 @@
-<button mat-icon-button>
+<button mat-icon-button [matMenuTriggerFor]="menu">
   <!-- hamburger menu icon :) -->
   <!-- see https://material.io/resources/icons/?search=menu&style=baseline -->
   <mat-icon>menu</mat-icon>
 </button>
+
+<!--
+  #menu
+    is a template reference, can be used here to refere our <mat-menu>
+-->
+<mat-menu #menu>
+  <button mat-menu-item routerLink="/">
+    <mat-icon>library_books</mat-icon>
+    <span>Courses</span>
+  </button>
+  <button mat-menu-item routerLink="about">
+    <mat-icon>question_answer</mat-icon>
+    <span>About</span>
+  </button>
+  <button mat-menu-item>
+    <mat-icon>person_add</mat-icon>
+    <span>Register</span>
+  </button>
+  <button mat-menu-item>
+    <mat-icon>account_circle</mat-icon>
+    <span>Login</span>
+  </button>
+</mat-menu>
