--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,13 @@
-
 <div class="courses-panel">
+  <h3>All Courses</h3>
 
-    <h1>All Courses</h1>
-
-
-
+  <mat-tab-group>
+    <mat-tab label="Beginners">
+      <app-courses-card-list [courses]="beginnerCourses"></app-courses-card-list>
+    </mat-tab>
+    <mat-tab label="Advanced">
+      <app-courses-card-list [courses]="advancedCourses"></app-courses-card-list>
+    </mat-tab>
+  </mat-tab-group>
 </div>
 
