--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,51 @@
-<app-top-menu></app-top-menu>
+<!--
+  previous version
+    	<app-top-menu></app-top-menu>
+  	  <main>
+	      <router-outlet></router-outlet>
+      </main>
 
-<main>
-    <!-- here is the output of the router, depending on the content of the URL: about,... -->
-    <router-outlet></router-outlet>
-</main>
+  replacing drop drown menu by a fullscreen left side menu:
+	  - map everything (the entire page!) into a <mat-sidenav-container>
+    - add fullscreen param
+    - ...etc
+
+  replace html toolbar (<app-top-menu></app-top-menu>)
+    - by <mat-toolbar>
+    - which inerit params from theme
+        color: no need to define it in .css
+    - add a button => trigger opening of the <mat-sidebar>
+ -->
+<mat-sidenav-container fullscreen>
+  <mat-sidenav #start>
+    <mat-nav-list>
+      <a mat-list-item routerLink="/">
+        <mat-icon>library_books</mat-icon>
+        <span>Courses</span>
+      </a>
+      <a mat-list-item routerLink="about">
+        <mat-icon>question_answer</mat-icon>
+        <span>About</span>
+      </a>
+      <a mat-list-item>
+        <mat-icon>person_add</mat-icon>
+        <span>Register</span>
+      </a>
+      <a mat-list-item>
+        <mat-icon>account_circle</mat-icon>
+        <span>Login</span>
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-toolbar color="primary">
+    <button mat-icon-button (click)="start.open()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </mat-toolbar>
+
+  <router-outlet></router-outlet>
+
+</mat-sidenav-container>
+
+
